# Python-MovieDB

./: Insomnia.json  README.md  app.py  app.wsgi  models.py  pyproject.toml  requirements.txt
templates/: index.html.jinja2  movie.html.jinja2
